--- a/AMDIAM/packages.config
+++ b/AMDIAM/packages.config
@@ -5,4 +5,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="SendGrid" version="9.28.1" targetFramework="net472" />
+  <package id="starkbank-ecdsa" version="1.3.3" targetFramework="net472" />
 </packages>
